--- a/MemoireMIAGEM2/reference.bib
+++ b/MemoireMIAGEM2/reference.bib
@@ -1,9 +1,18 @@
 % This file was created with JabRef 2.8.1.
 % Encoding: UTF8
-
 @book{1,
+  author = {Rafael Enrique Angarita Arocha },
+  title = {An approach for Self-healing Transactional Composite Services}
+}
+
+@book{2,
   author = {R. Angarita . M. Rukoz  . Y. Cardinale },
   title = {Modeling Dynamic Recovery Strategy for Composite Web Services Execution}
+}
+
+@book{3,
+  author = {M. Rukoz  . Y. Cardinale },
+  title = {Reliable Execution of Transactional Composite Web Services: An Approach}
 }
 
 @MISC{badsc,
