--- a/MemoireMIAGEM2/reference.bib
+++ b/MemoireMIAGEM2/reference.bib
@@ -15,6 +15,11 @@
   title = {Reliable Execution of Transactional Composite Web Services: An Approach}
 }
 
+@book{4,
+  author = {R. Angarita  . M. Rukoz  . Y. Cardinale },
+  title = { Towards a Dynamic Recovery Decision}
+}
+
 @MISC{badsc,
   author = {B-ADSc},
   title = {Modélisation des Systèmes Complexes; http://www.b-adsc.com}, 
