--- a/MemoireMIAGEM2/intro.tex
+++ b/MemoireMIAGEM2/intro.tex
@@ -1,7 +1,7 @@
 \vspace{1cm}
 
 
-\section{introduction}
+\chapter{introduction}
 
 Les web services sont un ensemble de fonctionnalités de programmes informatiques permettant à des applications et des systèmes de fonctionner et d'échanger des informations à distance.
 
