--- a/MemoireMIAGEM2/memoire.tex
+++ b/MemoireMIAGEM2/memoire.tex
@@ -178,7 +178,7 @@ urlcolor=black}
 
 % Title
 \rule{\linewidth}{0.5mm} \\[0.4cm]
-{ \huge \bfseries Prédiction de la stratégie de reprise d'un Web service composite\\[0.4cm] }
+{ \huge \bfseries Prédiction de la stratégie de récupération d'un service Web composite\\[0.4cm] }
 \rule{\linewidth}{0.5mm} \\[1.5cm]
 
 \vfill
@@ -215,6 +215,8 @@ urlcolor=black}
 
 Je tiens à remercier toutes les personnes qui m’ont aidée lors de la rédaction de ce mémoire. 
 
+...
+
 \tableofcontents
 \listoffigures
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -228,6 +230,7 @@ Je tiens à remercier toutes les personnes qui m’ont aidée lors de la rédact
 \include{intro}
 \include{Concept}
 \include{Etat_de_l'art}
+\include{outillage}
 
 
 \appendix
