--- a/MemoireMIAGEM2/reference.bib
+++ b/MemoireMIAGEM2/reference.bib
@@ -6,7 +6,7 @@
 }
 
 @book{2,
-  author = {R. Angarita . M. Rukoz  . Y. Cardinale },
+  author = {R.Angarita . Y.Cardinale . M.Rukoz},
   title = {Modeling Dynamic Recovery Strategy for Composite Web Services Execution}
 }
 
@@ -20,16 +20,16 @@
   title = { Towards a Dynamic Recovery Decision}
 }
 
-@MISC{badsc,
-  author = {B-ADSc},
-  title = {Modélisation des Systèmes Complexes; http://www.b-adsc.com}, 
-  url = {http://www.b-adsc.com/}
+@book{5,
+  author = {R. Angarita . Y.Cardinale . M.Rukoz },
+  title = { FaCETa: Backward and Forward Recovery for Execution of Transactional Composite WS}
 }
 
-@MISC{domis,
-  author = {IGD, Institut de génie décisionnel},
-  title = {Pourquoi la modélisation des processus dans les projets d'organisation ?}, 
-  url = {http://iegd.institut.online.fr/DoMIS-pourquoi-fr.htm}
+@book{6,
+  author = {Céline Lopez-Velasco },
+  title = { Sélection et composition de services Web pour la génération d’applications adaptées au contexte d’utilisation}
 }
 
+https://medium.com/@bobkrc/machine-learning-apprentissage-supervisé-ou-non-supervisé-bced5be4fd7f
 
+https://openclassrooms.com/courses/initiez-vous-au-machine-learning/identifiez-les-differents-types-de-problemes-de-machine-learning
