--- a/MemoireMIAGEM2/reference.bib
+++ b/MemoireMIAGEM2/reference.bib
@@ -30,6 +30,28 @@
   title = { Sélection et composition de services Web pour la génération d’applications adaptées au contexte d’utilisation}
 }
 
+@book{7,
+  author = {Sylvain Arlot },
+  title = { Validation croisée }
+}
+
 https://medium.com/@bobkrc/machine-learning-apprentissage-supervisé-ou-non-supervisé-bced5be4fd7f
 
 https://openclassrooms.com/courses/initiez-vous-au-machine-learning/identifiez-les-differents-types-de-problemes-de-machine-learning
+
+
+@MISC{RF,
+  author = {Shotton, J., Sharp, T., Kipman, A., Fitzgibbon, A., Finocchio, M., Blake},
+  title = {Randome Forest}, 
+  url = {https://dataanalyticspost.com/Lexique/random-forest/}
+}
+
+
+@MISC{NB,
+  author = { Younes Benzaki},
+  title = {Naive Bayes Classifier pour Machine Learning}, 
+  url = {https://mrmint.fr/naive-bayes-classifier}
+}
+
+https://www.analyticsvidhya.com
+
